// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation renders Header + Footer 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
      "width": undefined,
    }
  }
>
  <nav
    aria-label="label"
    className="box"
    style={
      Object {
        "height": "100%",
        "minWidth": 280,
        "width": 280,
      }
    }
  >
    <div>
      <div
        className="box default paddingX2 paddingY2"
        style={
          Object {
            "height": "100%",
            "paddingBottom": 24,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap4 xsDirectionColumn"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap0 columnGap4 xsDirectionColumn"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="box paddingX4"
                >
                  <div
                    className="box default"
                    style={
                      Object {
                        "height": 100,
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <hr
                  className="divider"
                />
              </div>
            </div>
          </div>
          <div
            className="FlexItem"
          >
            <ul
              className="ulItem"
            >
              <li
                className="liItem"
              >
                <a
                  className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                  tabIndex={0}
                  target={null}
                >
                  <div
                    className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 44,
                        "paddingInlineEnd": "16px",
                        "paddingInlineStart": "16px",
                      }
                    }
                  >
                    <div
                      className="Flex rowGap2 columnGap0 xsDirectionRow"
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="FlexItem flexGrow selfCenter"
                      >
                        <span
                          className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                        >
                          test
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap0 columnGap4 xsDirectionColumn"
            >
              <div
                className="FlexItem"
              >
                <hr
                  className="divider"
                />
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box paddingX4"
                >
                  <div
                    className="box default"
                    style={
                      Object {
                        "height": 100,
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SideNavigation renders Icon + Badge/Notification + Counter + Border 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
      "width": undefined,
    }
  }
>
  <nav
    aria-label="label"
    className="box"
    style={
      Object {
        "height": "100%",
        "minWidth": 280,
        "width": 280,
      }
    }
  >
    <div
      className="borderRight fullHeight"
    >
      <div
        className="box default paddingX2 paddingY2"
        style={
          Object {
            "height": "100%",
            "paddingBottom": 24,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap4 xsDirectionColumn"
        >
          <div
            className="FlexItem"
          >
            <ul
              className="ulItem"
            >
              <li
                className="liItem section"
              >
                <div
                  className="box marginBottom2 paddingX4 xsDisplayFlex"
                  role="presentation"
                >
                  <div
                    className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
                    style={
                      Object {
                        "WebkitLineClamp": 2,
                      }
                    }
                    title="section"
                  >
                    section
                  </div>
                </div>
                <ul
                  className="ulItem"
                >
                  <li
                    className="liItem"
                  >
                    <a
                      className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                      href="#"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      rel=""
                      tabIndex={0}
                      target={null}
                    >
                      <div
                        className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 44,
                            "paddingInlineEnd": "16px",
                            "paddingInlineStart": "16px",
                          }
                        }
                      >
                        <div
                          className="Flex rowGap2 columnGap0 xsDirectionRow"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="FlexItem selfCenter"
                          >
                            <div
                              aria-hidden={true}
                              className="box"
                            >
                              <svg
                                aria-hidden={true}
                                aria-label=""
                                className="icon defaultIcon"
                                height={16}
                                role="img"
                                viewBox="0 0 24 24"
                                width={16}
                              >
                                <path
                                  d="test-file-stub"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="FlexItem flexGrow selfCenter"
                          >
                            <span
                              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                            >
                              test
                              <div
                                className="box marginStart1 xsDisplayInlineBlock"
                                style={
                                  Object {
                                    "height": "100%",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  , 
                                </div>
                                <div
                                  className="Badge middle infoBase"
                                >
                                  <div
                                    className="Flex rowGap1 columnGap1 xsDirectionRow xsItemsCenter"
                                  >
                                    <div
                                      className="FlexItem"
                                    >
                                      <div
                                        className="box xsDisplayInlineBlock"
                                        style={
                                          Object {
                                            "marginTop": "2px",
                                          }
                                        }
                                      >
                                        New
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </span>
                          </div>
                          <div
                            className="FlexItem flexNone selfCenter"
                          >
                            <div
                              className="box xsDisplayVisuallyHidden"
                            >
                              , 
                            </div>
                            <div
                              aria-label="You have 20 notifications"
                              className="box marginEndN2"
                            >
                              <div
                                className="Text fontSize300 subtleText alignEnd breakWord fontWeightNormal"
                              >
                                20
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </a>
                  </li>
                  <li
                    className="liItem"
                  >
                    <a
                      className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                      href="#"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      rel=""
                      tabIndex={0}
                      target={null}
                    >
                      <div
                        className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 44,
                            "paddingInlineEnd": "16px",
                            "paddingInlineStart": "16px",
                          }
                        }
                      >
                        <div
                          className="Flex rowGap2 columnGap0 xsDirectionRow"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="FlexItem selfCenter"
                          >
                            <div
                              aria-hidden={true}
                              className="box"
                            >
                              <svg
                                aria-hidden={true}
                                aria-label=""
                                className="icon defaultIcon"
                                height={16}
                                role="img"
                                viewBox="0 0 24 24"
                                width={16}
                              >
                                <path
                                  d="test-file-stub"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="FlexItem flexGrow selfCenter"
                          >
                            <span
                              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                            >
                              test
                              <div
                                className="box marginStart1 xsDisplayInlineBlock"
                                style={
                                  Object {
                                    "height": "100%",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  , 
                                </div>
                                <div
                                  aria-label="You have new messages"
                                  className="box circle primary"
                                  role="status"
                                  style={
                                    Object {
                                      "height": 8,
                                      "width": 8,
                                    }
                                  }
                                />
                              </div>
                            </span>
                          </div>
                          <div
                            className="FlexItem flexNone selfCenter"
                          >
                            <div
                              className="box xsDisplayVisuallyHidden"
                            >
                              , 
                            </div>
                            <div
                              aria-label="You have 20 notifications"
                              className="box marginEndN2"
                            >
                              <div
                                className="Text fontSize300 subtleText alignEnd breakWord fontWeightNormal"
                              >
                                20
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SideNavigation renders Sections 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
      "width": undefined,
    }
  }
>
  <nav
    aria-label="label"
    className="box"
    style={
      Object {
        "height": "100%",
        "minWidth": 280,
        "width": 280,
      }
    }
  >
    <div>
      <div
        className="box default paddingX2 paddingY2"
        style={
          Object {
            "height": "100%",
            "paddingBottom": 24,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap4 xsDirectionColumn"
        >
          <div
            className="FlexItem"
          >
            <ul
              className="ulItem"
            >
              <li
                className="liItem section"
              >
                <div
                  className="box marginBottom2 paddingX4 xsDisplayFlex"
                  role="presentation"
                >
                  <div
                    className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
                    style={
                      Object {
                        "WebkitLineClamp": 2,
                      }
                    }
                    title="section"
                  >
                    section
                  </div>
                </div>
                <ul
                  className="ulItem"
                >
                  <li
                    className="liItem"
                  >
                    <a
                      className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                      href="#"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      rel=""
                      tabIndex={0}
                      target={null}
                    >
                      <div
                        className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 44,
                            "paddingInlineEnd": "16px",
                            "paddingInlineStart": "16px",
                          }
                        }
                      >
                        <div
                          className="Flex rowGap2 columnGap0 xsDirectionRow"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="FlexItem flexGrow selfCenter"
                          >
                            <span
                              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                            >
                              test
                            </span>
                          </div>
                        </div>
                      </div>
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SideNavigation renders basic Item 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
      "width": undefined,
    }
  }
>
  <nav
    aria-label="label"
    className="box"
    style={
      Object {
        "height": "100%",
        "minWidth": 280,
        "width": 280,
      }
    }
  >
    <div>
      <div
        className="box default paddingX2 paddingY2"
        style={
          Object {
            "height": "100%",
            "paddingBottom": 24,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap4 xsDirectionColumn"
        >
          <div
            className="FlexItem"
          >
            <ul
              className="ulItem"
            >
              <li
                className="liItem"
              >
                <a
                  className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                  tabIndex={0}
                  target={null}
                >
                  <div
                    className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 44,
                        "paddingInlineEnd": "16px",
                        "paddingInlineStart": "16px",
                      }
                    }
                  >
                    <div
                      className="Flex rowGap2 columnGap0 xsDirectionRow"
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="FlexItem flexGrow selfCenter"
                      >
                        <span
                          className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                        >
                          test
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SideNavigation renders nested directory 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
      "width": undefined,
    }
  }
>
  <nav
    aria-label="Nested items example"
    className="box"
    style={
      Object {
        "height": "100%",
        "minWidth": 280,
        "width": 280,
      }
    }
  >
    <div>
      <div
        className="box default paddingX2 paddingY2"
        style={
          Object {
            "height": "100%",
            "paddingBottom": 24,
          }
        }
      >
        <div
          className="Flex rowGap0 columnGap4 xsDirectionColumn"
        >
          <div
            className="FlexItem"
          >
            <ul
              className="ulItem"
            >
              <li
                className="liItem"
              >
                <a
                  className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                  tabIndex={0}
                  target={null}
                >
                  <div
                    className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 44,
                        "paddingInlineEnd": "16px",
                        "paddingInlineStart": "16px",
                      }
                    }
                  >
                    <div
                      className="Flex rowGap2 columnGap0 xsDirectionRow"
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="FlexItem selfCenter"
                      >
                        <div
                          aria-hidden={true}
                          className="box"
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="rtlSupport icon defaultIcon"
                            height={16}
                            role="img"
                            viewBox="0 0 24 24"
                            width={16}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="FlexItem flexGrow selfCenter"
                      >
                        <span
                          className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                        >
                          Reporting
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </li>
              <li
                className="liItem"
              >
                <a
                  className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                  tabIndex={0}
                  target={null}
                >
                  <div
                    className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 44,
                        "paddingInlineEnd": "16px",
                        "paddingInlineStart": "16px",
                      }
                    }
                  >
                    <div
                      className="Flex rowGap2 columnGap0 xsDirectionRow"
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="FlexItem selfCenter"
                      >
                        <div
                          aria-hidden={true}
                          className="box"
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="icon defaultIcon"
                            height={16}
                            role="img"
                            viewBox="0 0 24 24"
                            width={16}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="FlexItem flexGrow selfCenter"
                      >
                        <span
                          className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                        >
                          Conversions
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </li>
              <li
                className="liItem section"
              >
                <div
                  className="box marginBottom2 paddingX4 xsDisplayFlex"
                  role="presentation"
                >
                  <div
                    className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
                    style={
                      Object {
                        "WebkitLineClamp": 2,
                      }
                    }
                    title="Audiences"
                  >
                    Audiences
                  </div>
                </div>
                <ul
                  className="ulItem"
                >
                  <li
                    className="liItem"
                  >
                    <a
                      className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                      href="#"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      rel=""
                      tabIndex={0}
                      target={null}
                    >
                      <div
                        className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 44,
                            "paddingInlineEnd": "16px",
                            "paddingInlineStart": "16px",
                          }
                        }
                      >
                        <div
                          className="Flex rowGap2 columnGap0 xsDirectionRow"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="FlexItem selfCenter"
                          >
                            <div
                              aria-hidden={true}
                              className="box"
                            >
                              <svg
                                aria-hidden={true}
                                aria-label=""
                                className="icon defaultIcon"
                                height={16}
                                role="img"
                                viewBox="0 0 24 24"
                                width={16}
                              >
                                <path
                                  d="test-file-stub"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="FlexItem flexGrow selfCenter"
                          >
                            <span
                              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                            >
                              Thanksgiving
                            </span>
                          </div>
                        </div>
                      </div>
                    </a>
                  </li>
                  <li
                    className="liItem"
                  >
                    <div
                      aria-controls=":rd:"
                      aria-disabled={false}
                      aria-expanded={false}
                      className="hideOutline tapTransition rounding2 accessibilityOutline fullWidth pointer"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 44,
                            "paddingInlineEnd": "16px",
                            "paddingInlineStart": "16px",
                          }
                        }
                      >
                        <div
                          className="Flex rowGap2 columnGap0 xsDirectionRow"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="FlexItem selfCenter"
                          >
                            <div
                              aria-hidden={true}
                              className="box"
                            >
                              <svg
                                aria-hidden={true}
                                aria-label=""
                                className="icon defaultIcon"
                                height={16}
                                role="img"
                                viewBox="0 0 24 24"
                                width={16}
                              >
                                <path
                                  d="test-file-stub"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="FlexItem flexGrow selfCenter"
                          >
                            <span
                              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                            >
                              Christmas
                            </span>
                          </div>
                          <div
                            className="FlexItem flexNone selfCenter"
                          >
                            <div
                              aria-hidden={true}
                              className="box circle marginEndN2 marginStart2"
                              tabIndex={-1}
                            >
                              <svg
                                aria-hidden={true}
                                aria-label=""
                                className="icon defaultIcon iconBlock"
                                height={12}
                                role="img"
                                viewBox="0 0 24 24"
                                width={12}
                              >
                                <path
                                  d="test-file-stub"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    className="liItem"
                  >
                    <div
                      className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                      style={
                        Object {
                          "minHeight": 44,
                          "paddingInlineEnd": "16px",
                          "paddingInlineStart": "16px",
                        }
                      }
                    >
                      <div
                        className="Flex rowGap2 columnGap0 xsDirectionRow"
                        style={
                          Object {
                            "height": "100%",
                            "width": "100%",
                          }
                        }
                      >
                        <div
                          className="FlexItem selfCenter"
                        >
                          <div
                            aria-hidden={true}
                            className="box"
                          >
                            <svg
                              aria-hidden={true}
                              aria-label=""
                              className="icon defaultIcon"
                              height={16}
                              role="img"
                              viewBox="0 0 24 24"
                              width={16}
                            >
                              <path
                                d="test-file-stub"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          className="FlexItem flexGrow selfCenter"
                        >
                          <span
                            className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                          >
                            Halloween
                          </span>
                        </div>
                      </div>
                    </div>
                    <ul
                      className="ulItem"
                      id=":re:"
                    >
                      <li
                        className="liItem"
                      >
                        <a
                          className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                          href="#"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          rel=""
                          tabIndex={0}
                          target={null}
                        >
                          <div
                            className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                            style={
                              Object {
                                "minHeight": 44,
                                "paddingInlineEnd": "16px",
                                "paddingInlineStart": "48px",
                              }
                            }
                          >
                            <div
                              className="Flex rowGap2 columnGap0 xsDirectionRow"
                              style={
                                Object {
                                  "height": "100%",
                                  "width": "100%",
                                }
                              }
                            >
                              <div
                                className="FlexItem flexGrow selfCenter"
                              >
                                <span
                                  className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                                >
                                  East Coast
                                </span>
                              </div>
                            </div>
                          </div>
                        </a>
                      </li>
                      <li
                        className="liItem"
                      >
                        <a
                          className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
                          href="#"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          rel=""
                          tabIndex={0}
                          target={null}
                        >
                          <div
                            className="box paddingY2 rounding2 xsDisplayFlex xsItemsCenter"
                            style={
                              Object {
                                "minHeight": 44,
                                "paddingInlineEnd": "16px",
                                "paddingInlineStart": "48px",
                              }
                            }
                          >
                            <div
                              className="Flex rowGap2 columnGap0 xsDirectionRow"
                              style={
                                Object {
                                  "height": "100%",
                                  "width": "100%",
                                }
                              }
                            >
                              <div
                                className="FlexItem flexGrow selfCenter"
                              >
                                <span
                                  className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                                >
                                  West Coast
                                </span>
                              </div>
                            </div>
                          </div>
                        </a>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
